Add SentenceTransitionController Update SplitText greensock

--- a/deploy/htdocs/version/src/inc/style/asset/_asset.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_asset.scss
@@ -9,6 +9,7 @@
 @import 'pagination-number';
 @import 'scrollbar';
 @import 'link';
+@import 'sentence-animation';
 
 @import 'infinite-carousel/infinite-carousel';
 
