Fixed ease typo Tweaked the callback counter to return a resolved promise if no components are found

--- a/deploy/htdocs/version/src/inc/style/component/_program-module-item.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_program-module-item.scss
@@ -67,7 +67,7 @@
 		overflow: hidden;
 		position: absolute;
 		border: 1px solid #e7e7e7;
-		transition: width 250ms ease(easeExpoOut);
+		transition: width 250ms ease(easeOutExpo);
 	}
 
 	&:first-child {
