--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -18,6 +18,9 @@
 						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'map'}]">Markets Map</a>
 					</li>
 					<li class="menu-item">
+						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'knowledge-center'}]">Knowledge Center</a>
+					</li>
+					<li class="menu-item">
 						<a class="main-link" href="#">Contact us</a>
 					</li>
 				</ul>
