Add the more block Update swagger docs

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
@@ -1,4 +1,4 @@
-<a class="component-block-article-teaser">
+<a class="component-block-article-teaser" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: data.target}]">
 	<figure class="abs-fill">
 		<img data-bind="
 			attr: {
