--- a/deploy/htdocs/version/src/inc/style/type/_heading.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_heading.scss
@@ -41,3 +41,8 @@
 .heading-07 {
 	font: 600 1.8rem / 2.1rem $fontOpenSans;
 }
+
+// Open sans extra-bold
+.heading-08 {
+	font: 800 1.2rem / 2.1rem $fontOpenSans;
+}
