Updated the menu to open the contact link

--- a/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/menu/menu.html
@@ -21,7 +21,7 @@
 						<a class="main-link" data-bind="gaiaGoto: [Branches.CONTENT_PAGE, {deeplink: 'knowledge-center'}]">Knowledge Center</a>
 					</li>
 					<li class="menu-item">
-						<a class="main-link" href="#">Contact us</a>
+						<button class="button main-link" data-bind="tap: $root.handleClickContact.bind($root)">Contact us</button>
 					</li>
 				</ul>
 			</div>
