Added the audio fragment block

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -98,3 +98,5 @@
 
 @import "button/button-play-circle";
 @import "block/block-more";
+@import "block/block-audio-fragment";
+@import "audio-player";
