--- a/deploy/htdocs/version/src/inc/style/component/_header.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_header.scss
@@ -25,14 +25,13 @@
 	}
 
 	&.theme-light {
-
 	}
 
 	&.theme-dark {
-
 	}
 
 	&.enable-solid-background {
 		background: $colorWhite;
+		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
 	}
 }
