--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-start-advertising/button-start-advertising.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-start-advertising/button-start-advertising.html
@@ -1,4 +1,4 @@
-<button class="component-button-start-advertising button">
+<button class="component-button-start-advertising button" data-bind="tap: handleClick, attr: { title: title }">
 	<span class="background"></span>
 	<span class="icon" data-bind="icon: 'circle-arrow-right'"></span>
 	<span class="label">{{label}}</span>
