Updated swagger Added percentage component

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
@@ -29,6 +29,7 @@
 					options: {
 						action: data.link,
 						arrowDirection: $root.Direction.DOWN,
+						arrowPosition: $root.Alignment.LEFT,
 						size: $root.ButtonSize.LARGE
 					}
 				} --><!-- /ko -->
