--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -3,7 +3,7 @@
 	<div class="slide-content-wrapper abs-fill">
 		<div class="background-triangle"></div>
 		<div class="secondary-background-triangle"></div>
-		<div class="tertiary-background-triangle"></div>
+		<div class="tertiary-background-triangle" data-bind="visible: !data.statistics"></div>
 		<div class="slide-content">
 			<h2 class="heading heading-01" data-bind="html: data.heading"></h2>
 
@@ -18,10 +18,47 @@
 					options: {
 						action: data.link,
 						arrowDirection: $root.Direction.DOWN,
+						arrowPosition: $root.Alignment.LEFT,
 						size: $root.ButtonSize.LARGE
 					}
 				} --><!-- /ko -->
 			<!-- /ko -->
 		</div>
+
+		<!-- ko with: data.statistics -->
+			<div class="statistics-wrapper">
+				<h3 class="heading heading-07" data-bind="html: heading"></h3>
+				<div class="statistics" data-bind="foreach: stats">
+					<div class="statistic">
+						<h4 class="heading heading-08">
+							<span data-bind="html: heading"></span><br/>
+							<strong data-bind="html: description"></strong>
+						</h4>
+						<!-- ko component: {
+							name: 'percentage-loader',
+							onComplete: $root.controller.callbackCounter.get(),
+							options: {
+								percentage: $root.Type.isNumber(value) ? value : 100
+							}
+						} --><!-- /ko -->
+					</div>
+				</div>
+			</div>
+		<!-- /ko -->
+
+		<!-- ko if: data.secondaryLink -->
+			<div class="secondary-link">
+				<!-- ko component: {
+					name: 'button/button-circle-arrow',
+					onComplete: $root.controller.callbackCounter.get(),
+					options: {
+						action: data.secondaryLink,
+						arrowDirection: $root.Direction.RIGHT,
+						arrowPosition: $root.Alignment.RIGHT,
+						size: $root.ButtonSize.LARGE
+					}
+				} --><!-- /ko -->
+			</div>
+		<!-- /ko -->
 	</div>
 </div>
