--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-circle-arrow/button-circle-arrow.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-circle-arrow/button-circle-arrow.html
@@ -1,4 +1,10 @@
 <button class="component-button-circle-arrow button" data-bind="css: size, tap: handleClick, attr: { title: title }">
-	<span class="icon" data-bind="icon: 'circle-arrow-' + $root.Direction[data.arrowDirection].toLowerCase()"></span>
-	<span class="label">{{label}}</span>
+	<div class="order-container" data-bind="css: {
+		'align-left': data.arrowPosition === $root.Alignment.LEFT,
+		'align-right': data.arrowPosition === $root.Alignment.RIGHT
+	}">
+		<span class="icon"
+		      data-bind="icon: 'circle-arrow-' + $root.Direction[data.arrowDirection].toLowerCase()"></span>
+		<span class="label">{{label}}</span>
+	</div>
 </button>
