Updated the image sequence class

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
@@ -1,7 +1,7 @@
 <div class="component-block-map" data-bind="css: {'windowed': data.windowed}">
 	<div class="aspect-ratio-wrapper overrule-overlap">
 		<div class="aspect-ratio-inner abs-fill">
-			<div class="map-image abs-fill">
+			<div class="map-image">
 				<!-- ko component: {
 					name: 'image-sequence',
 					onComplete: $root.controller.callbackCounter.get($root.controller.handleImageSequenceReady.bind($root.controller)),
