--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
@@ -7,10 +7,18 @@
 				<div class="description copy copy-01" data-bind="html: data.paragraph"></div>
 			</div>
 			<div class="map-image">
+				<!-- ko component: {
+					name: 'image-sequence',
+					onComplete: $root.controller.callbackCounter.get($root.controller.handleImageSequenceReady.bind($root.controller)),
+					options: {
+						imageSequence: data.imageSequence
+					}
+				} --><!-- /ko -->
 				<img class="abs-fill" src="data/image/map-secondary/map-background.png" alt="">
-				<div class="progress-bar">
-					<div class="progress" data-bind="style: {'width': '100%'}"></div>
-				</div>
+			</div>
+
+			<div class="progress-bar">
+				<div class="progress" data-bind="style: {'width': ($root.sequenceProgress() * 100) + '%'}"></div>
 			</div>
 
 			<!-- ko if: data.link -->
