--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -1,5 +1,11 @@
 <div class="component-block-hero-main">
-	<img src="data/image/hero-main/slide-1.jpg" alt="" data-bind="">
+	<!-- ko component: {
+		name: 'image-crossfader',
+		onComplete: $root.controller.callbackCounter.get($root.controller.handleImageCrossfaderReady.bind($root.controller)),
+		options: {
+
+		}
+	} --><!-- /ko -->
 	<div class="slide-content-wrapper abs-fill">
 		<div class="background-triangle"></div>
 		<div class="secondary-background-triangle"></div>
