--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -1,10 +1,7 @@
 <div class="component-block-hero-main">
 	<!-- ko component: {
 		name: 'image-crossfader',
-		onComplete: $root.controller.callbackCounter.get($root.controller.handleImageCrossfaderReady.bind($root.controller)),
-		options: {
-
-		}
+		onComplete: $root.controller.callbackCounter.get($root.controller.handleImageCrossfaderReady.bind($root.controller))
 	} --><!-- /ko -->
 	<div class="slide-content-wrapper abs-fill" data-bind="with: data.slides[0]">
 		<div class="background-triangle"></div>
