--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-persona-selector/block-persona-selector.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-persona-selector/block-persona-selector.html
@@ -7,21 +7,15 @@
 	</div>
 	<div class="persona-content-wrapper abs-fill">
 		<div class="background-triangle"></div>
-		<div class="persona-content">
-			<h2 class="heading heading-04">Small Business</h2>
-			<p class="copy copy-01">Want to expand out from advertising on Facebook and Google?</p>
+		<div class="persona-content" data-bind="with: data.personas[$root.activeIndex()]">
+			<h2 class="heading heading-04" data-bind="html: $data.heading"></h2>
+			<p class="copy copy-01" data-bind="html: $data.paragraph"></p>
 			<!-- ko component: {
 					name: 'button/button-main',
 					onComplete: $root.controller.callbackCounter.get(),
 					options: {
-						action: {
-							label: "Grow your business",
-							title: "Grow your business",
-							target: "home",
-							type: 0
-						},
-						size: $root.ButtonSize.LARGE,
-						disabled: $root.findOutMoreDisabled
+						action: $data.link,
+						size: $root.ButtonSize.LARGE
 					}
 				} --><!-- /ko -->
 		</div>
