Changed mediaqueries to be desktop first

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
@@ -6,8 +6,8 @@
 			},
 			image: {
 				queries: [
-					[$root.MediaQueries.X_SMALL, data.image.normal ],
-					[$root.MediaQueries.SMALL, data.image.small]
+					[$root.MediaQueries.SMALL, data.image.normal ],
+					[$root.MediaQueries.SMALL_MIN, data.image.small]
 				],
 				state: $root.deviceState()
 			}" />
