--- a/deploy/htdocs/version/src/inc/style/page/_index.scss
+++ b/deploy/htdocs/version/src/inc/style/page/_index.scss
@@ -34,6 +34,17 @@
 	}
 
 	/**
+	 * Device state name
+	 */
+	//.device-state{
+	//	@include pos(auto, auto, 0, 0);
+	//	background: orange;
+	//	color: #fff;
+	//	position: fixed;
+	//	padding: 10px;
+	//}
+
+	/**
 	 * Development grid
 	 */
 	.grid {
