Changed image queries

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
@@ -6,8 +6,8 @@
 			},
 			image: {
 				queries: [
-					[$root.MediaQueries.X_SMALL, data.background.small ],
-					[$root.MediaQueries.SMALL, data.background.normal]
+					[$root.MediaQueries.SMALL, data.background.small ],
+					[$root.MediaQueries.SMALL_MIN, data.background.normal]
 				],
 				state: $root.deviceState()
 			}" />
