--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
@@ -6,8 +6,8 @@
 			},
 			image: {
 				queries: [
-					[$root.MediaQueries.X_SMALL, data.steps[0].background.normal ],
-					[$root.MediaQueries.SMALL, data.steps[0].background.small]
+					[$root.MediaQueries.SMALL, data.steps[0].background.normal ],
+					[$root.MediaQueries.SMALL_MIN, data.steps[0].background.small]
 				],
 				state: $root.deviceState()
 			}" />
