--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-circle-arrow/button-circle-arrow.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-circle-arrow/button-circle-arrow.html
@@ -3,8 +3,7 @@
 		'align-left': data.arrowPosition === $root.Alignment.LEFT,
 		'align-right': data.arrowPosition === $root.Alignment.RIGHT
 	}">
-		<span class="icon"
-		      data-bind="icon: 'circle-arrow-' + $root.Direction[data.arrowDirection].toLowerCase()"></span>
+		<span class="icon"data-bind="icon: 'circle-arrow-' + $root.Direction[data.arrowDirection].toLowerCase()"></span>
 		<span class="label">{{label}}</span>
 	</div>
 </button>
