--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-quote-secondary/block-quote-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-quote-secondary/block-quote-secondary.html
@@ -1,4 +1,9 @@
 <div class="component-block-quote-secondary" data-bind="with: data">
-	<h2 class="heading-06 heading" data-bind="html: quote"></h2>
-	<p class="copy-03 copy" data-bind="html: author"></p>
+
+	<div class="site-frame">
+		<div class="quote-content">
+			<h2 class="heading-06 heading" data-bind="html: quote"></h2>
+			<p class="copy-03 copy" data-bind="html: author"></p>
+		</div>
+	</div>
 </div>
