--- a/deploy/htdocs/version/src/inc/style/component/block/_block-how-to-advertise.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-how-to-advertise.scss
@@ -1,7 +1,7 @@
 .component-block-how-to-advertise {
 
 	.header {
-		padding: $sizeGrid * 3 $sizeGrid * 3 $sizeGrid * 1;
+		padding: $sizeGrid * 3 0 $sizeGrid * 1;
 
 		.heading {
 			margin-bottom: $sizeGrid;
