--- a/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
@@ -1,6 +1,6 @@
 .component-block-latest {
 	background: $colorLightGrey;
-	padding: $sizeGrid * 3 $sizeGrid * 3 $sizeGrid * 1;
+	padding: $sizeGrid * 3 0 $sizeGrid * 1;
 
 	.header {
 		.heading {
