--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
@@ -1,29 +1,31 @@
 <div class="component-block-map" data-bind="css: {'windowed': data.windowed}">
-	<div class="aspect-ratio-wrapper overrule-overlap">
-		<div class="aspect-ratio-inner abs-fill">
-			<div class="map-image">
+	<div class="site-frame">
+		<div class="aspect-ratio-wrapper overrule-overlap">
+			<div class="aspect-ratio-inner abs-fill">
+				<div class="map-image">
+					<!-- ko component: {
+						name: 'image-sequence',
+						onComplete: $root.controller.callbackCounter.get($root.controller.handleImageSequenceReady.bind($root.controller)),
+						options: {
+							imageSequence: data.imageSequence
+						}
+					} --><!-- /ko -->
+					<img class="abs-fill" src="data/image/map/map-background.png" alt="">
+				</div>
+				<div class="map-content" data-bind="with: data.steps[$root.activeIndex()]">
+					<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft(($root.activeIndex() + 1).toString(), 2, '0')"></span>
+					<h3 class="heading heading-01" data-bind="html: heading"></h3>
+					<p class="copy copy-01" data-bind="html: paragraph"></p>
+				</div>
+
 				<!-- ko component: {
-					name: 'image-sequence',
-					onComplete: $root.controller.callbackCounter.get($root.controller.handleImageSequenceReady.bind($root.controller)),
+					name: 'map-slider',
+					onComplete: $root.controller.callbackCounter.get($root.controller.handleMapSliderReady.bind($root.controller)),
 					options: {
-						imageSequence: data.imageSequence
+						steps: data.steps
 					}
 				} --><!-- /ko -->
-				<img class="abs-fill" src="data/image/map/map-background.png" alt="">
 			</div>
-			<div class="map-content" data-bind="with: data.steps[$root.activeIndex()]">
-				<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft(($root.activeIndex() + 1).toString(), 2, '0')"></span>
-				<h3 class="heading heading-01" data-bind="html: heading"></h3>
-				<p class="copy copy-01" data-bind="html: paragraph"></p>
-			</div>
-
-			<!-- ko component: {
-				name: 'map-slider',
-				onComplete: $root.controller.callbackCounter.get($root.controller.handleMapSliderReady.bind($root.controller)),
-				options: {
-					steps: data.steps
-				}
-			} --><!-- /ko -->
 		</div>
 	</div>
 </div>
