--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-small-heading/block-small-heading.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-small-heading/block-small-heading.html
@@ -1,5 +1,7 @@
 <div class="component-block-small-heading">
-	<div class="overrule-overlap">
-		<h2 class="heading heading-04" data-bind="html: data.heading"></h2>
+	<div class="site-frame">
+		<div class="overrule-overlap">
+			<h2 class="heading heading-04" data-bind="html: data.heading"></h2>
+		</div>
 	</div>
 </div>
