--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-text/block-text.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-text/block-text.html
@@ -1,3 +1,5 @@
 <div class="component-block-text" data-bind="with: data">
-	<div class="html-content" data-bind="html: html"></div>
+	<div class="site-frame">
+		<div class="html-content" data-bind="html: html"></div>
+	</div>
 </div>
