--- a/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
@@ -1,5 +1,5 @@
 .component-block-filter-content {
-	padding: 0 $sizeGrid*3 $sizeGrid*2; // temp
+	padding: 0 0 $sizeGrid*2; // temp
 	background: $colorLightGrey;
 
 	.content-items {
