--- a/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
@@ -1,6 +1,7 @@
 .component-block-hero-main {
 	@include aspect-ratio(40*$sizeGrid, $sizeGrid * 24);
 	min-height: $sizeGrid * 24;
+	max-height: 100vh;
 
 	.slide-content-wrapper {
 		overflow: visible;
