--- a/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
@@ -2,6 +2,9 @@
 	position: relative;
 	width: 100%;
 	color: white;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: $largeSiteFrame;
 
 	&.windowed {
 		border-color: transparent;
