--- a/deploy/htdocs/version/src/inc/style/component/block/_block-quote-secondary.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-quote-secondary.scss
@@ -1,8 +1,14 @@
 .component-block-quote-secondary {
-	margin-left: $sizeGrid * 7;
-	margin-right: $sizeGrid * 7;
-	border-left: 5px solid $colorSecondary;
-	padding-left: $sizeGrid;
+
+	.site-frame {
+		padding-left: $sizeGrid * 7;
+		padding-right: $sizeGrid * 7;
+	}
+
+	.quote-content {
+		border-left: 5px solid $colorSecondary;
+		padding-left: $sizeGrid;
+	}
 
 	.heading {
 		padding-bottom: $sizeGrid;
