Change site-frame globally to fullwidth.

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-carousel/block-image-carousel.html
@@ -25,7 +25,7 @@
 			</ul>
 		</div>
 
-		<div class="pagination">
+		<div class="pagination site-frame">
 			<div class="track">
 				<div class="progress" data-bind="style: {'width': (($root.currentPage() / (data.slides.length - 1)) * 100) + '%'}"></div>
 			</div>
